edited the yaml file for final
